# Rscript

./: CHANGELOG.md  Cargo.toml  README.md  script_test
examples/: README.md
examples/shell/: Cargo.toml
examples/shell/scripts/echo-script/: Cargo.toml
examples/shell/scripts/echo-script/src/: lib.rs
examples/shell/scripts/eval-script/: Cargo.toml
examples/shell/scripts/eval-script/src/: main.rs
examples/shell/scripts/random-script/: Cargo.toml
examples/shell/scripts/random-script/src/: main.rs
examples/shell/shell-api/: Cargo.toml
examples/shell/shell-api/src/: lib.rs
examples/shell/shell-main/: Cargo.toml
examples/shell/shell-main/src/: main.rs
script_test_dir/: Cargo.toml
script_test_dir/src/: main.rs
src/: error.rs  ffi.rs  lib.rs  scripting.rs
