[package]
name = "rscript"
version = "0.11.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Easily script any rust project"
repository = "https://github.com/sigmaSd/Rscript"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
libloading = "0.7.1"
semver = { version = "1.0.3", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
